# test-gcp-ci-cd

./: cloudbuild.yaml  pyproject.toml
src/: dummy_app.py
test/: test.py
